# z3de

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  download_deps.py  download_externals.py
include/: bindings.hpp  camera.h  main.h  mesh.h  shader_sources.hpp
include/engine/: Camera.h  Entity.h  Mesh.h  camera.hpp  face.hpp  material.hpp  textures.hpp
scripts/: download_deps.py  gen_shaders.py
src/: camera.cpp  config.hpp.in  face.cpp  face.hpp  logging.cpp  logging.hpp  main.cpp  material.cpp  mesh.cpp  shader_sources_definitions.hpp.in  shaders.cpp
src/engine/: Camera.cpp  Mesh.cpp  camera.cpp  face.cpp  textures.cpp
src/interactions/: bindings.hpp  logging.cpp
src/light_structs/: light.hpp  sunlight.hpp
src/render/: camera.cpp  face.cpp  face.hpp  lights.hpp  material.cpp  material.hpp  shaders.cpp  shaders.hpp
src/render/shaders/: vertex.glsl
src/shader_sources/: fragment.glsl
src/shaders/: fragment.glsl  vertex.glsl
